fifth updated readme

--- a/notebook/pedro_capstone1.ipynb
+++ b/notebook/pedro_capstone1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "128338          73       0.0347  157.966              4    0.289  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "1       238854               4  England  Liverpool  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "147671     1  Gravity          76       0.0342  123.98              3    0.237  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "33       295400               4  United States  Los Angeles  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -728,6 +728,16 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  errors=errors,\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'|    | name               | artist          |   decade |   rank |   key |   tempo |   duration_m |   danceability |   energy |   loudness |   speechiness |   acousticness |   instrumentalness |   valence |   time_signature |\\n|---:|:-------------------|:----------------|---------:|-------:|------:|--------:|-------------:|---------------:|---------:|-----------:|--------------:|---------------:|-------------------:|----------:|-----------------:|\\n| 79 | We Belong Together | Mariah Carey    |     2000 |      1 |     0 | 139.975 |         3.36 |          0.838 |    0.469 |     -7.992 |        0.0835 |        0.0358  |           0        |     0.778 |                4 |\\n| 80 | Yeah!              | Usher           |     2000 |      2 |     2 | 105.018 |         4.17 |          0.894 |    0.791 |     -4.699 |        0.112  |        0.0183  |           0        |     0.583 |                4 |\\n| 81 | Low                | Flo Rida        |     2000 |      3 |    10 | 128.008 |         3.86 |          0.918 |    0.609 |     -5.64  |        0.0791 |        0.0928  |           0        |     0.304 |                4 |\\n| 82 | I Gotta Feeling    | Black Eyed Peas |     2000 |      4 |     0 | 127.965 |         4.82 |          0.741 |    0.748 |     -6.299 |        0.0264 |        0.0823  |           0        |     0.6   |                4 |\\n| 83 | How You Remind Me  | Nickelback      |     2000 |      5 |    10 | 172.011 |         3.74 |          0.432 |    0.795 |     -4.023 |        0.0321 |        0.00128 |           0        |     0.519 |                4 |\\n| 84 | No One             | Alicia Keys     |     2000 |      6 |     1 |  90.042 |         4.23 |          0.644 |    0.548 |     -5.416 |        0.0286 |        0.0209  |           8.68e-06 |     0.166 |                4 |'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -747,7 +757,9 @@
     "top20_80 = top201.loc[top20['decade'] == 80]\n",
     "top20_90 = top201.loc[top20['decade'] == 90]\n",
     "top20_00 = top201.loc[top20['decade'] == 2000]\n",
-    "top20_60=top201.loc[top20['decade'] == 60]"
+    "top20_60=top201.loc[top20['decade'] == 60]\n",
+    "\n",
+    "top20_00.head(6).to_markdown()\n"
    ]
   },
   {
